extensions/migrate-nx/tests/snapshots/migrate_nx_test__migrate_nx__projects__converts_name_and_implicit_deps.snap
---
source: crates/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"moon.yml\")).unwrap()"
---
dependsOn:
- a
- b
- c
id: custom
language: javascript
platform: node

