extensions/migrate-nx/tests/snapshots/migrate_nx_test__migrate_nx__projects__converts_named_inputs.snap
---
source: crates/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"moon.yml\")).unwrap()"
---
fileGroups:
  variants:
  - $FOO_BAR
  - '**/*'
  - '**/*'
  - '!**/*'
  - /**/*
  - '!/**/*'
  - src/file.ts
  - src/file.*
  - src
language: javascript
platform: node
