extensions/migrate-nx/tests/snapshots/migrate_nx_test__migrate_nx__projects__converts_project_json-3.snap
---
source: crates/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"foo/moon.yml\")).unwrap()"
---
dependsOn:
- bar
language: javascript
platform: node
tasks:
  e2e:
    command: cypress
    args:
    - --cypressConfig
    - $workspaceRoot/foo/cypress.config.ts
    - --no-debug
    - --parallel
  e2e.dev:
    extends: e2e
    args:
    - --devServerTarget
    - my-app:serve
  e2e.qa:
    extends: e2e
    args:
    - --baseUrl
    - https://some-internal-url.example.com
