extensions/migrate-nx/tests/snapshots/migrate_nx_test__migrate_nx__projects__converts_project_json.snap
---
source: crates/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"bar/moon.yml\")).unwrap()"
---
language: javascript
platform: node
tasks:
  build:
    command: webpack
    args:
    - --outputPath
    - $workspaceRoot/dist/bar
  echo:
    command: echo 'hello world'
  test:
    command: jest
    args:
    - --concurrency
    - '5'
    - --passWithNoTests
type: application

