extensions/migrate-nx/tests/snapshots/migrate_nx_test__migrate_nx__projects__converts_type_and_tags.snap
---
source: crates/migrate-nx/tests/migrate_nx_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"app/moon.yml\")).unwrap()"
---
language: javascript
platform: node
tags:
- scope.client
- scope.server

